<resources>
    <string name="app_name" translatable="false">My Kinopoisk</string>
    <string name="menu_bottom_movies">Movies</string>
    <string name="menu_bottom_favorites">Favorites</string>
    <string name="menu_bottom_note">Notes</string>
    <string name="menu_bottom_map">Map</string>
    <string name="menu_toolbar_search">Search</string>
    <string name="movie_information">Movie information</string>
    <string name="menu_toolbar_favorite">Favorites</string>
    <string name="ok" translatable="false">OK</string>
    <string name="kp" translatable="false">kp:</string>
    <string name="menu_toolbar_note">Notes</string>
    <string name="button_add_note">new</string>
    <string name="new_note">Make note</string>
    <string name="title_make_note">Title</string>
    <string name="comment_make_note">Comment</string>
    <string name="validator_error_null">The field cannot be empty.</string>
    <string name="title_dialog_incorrect_entry">Incorrect data entry</string>
    <string name="message_dialog_incorrect_entry">Check the entered data and try again.</string>
    <string name="title_dialog_successful">Successful addition</string>
    <string name="title_dialog_delete_note">Delete</string>
    <string name="message_dialog_delete">Are you sure you want to delete note?</string>
    <string name="toast_text_delete">Note has been deleted</string>
    <string name="toast_text_not_delete">Note not deleted</string>
    <string name="title_dialog_delete_favorite">Delete</string>
    <string name="toast_text_delete_favorite">Favorite has been deleted</string>
    <string name="toast_text_not_delete_favorite">Favorite has not been deleted</string>
    <string name="add_favorite">Save</string>
    <string name="add_message_favorite">Save to favorites?</string>
    <string name="title_population">Population:</string>
    <string name="title_area">Area:</string>
    <string name="menu_toolbar_setting">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="night_mode_button_dark">Dark mode</string>
    <string name="night_mode_button_light">Light mode</string>
    <string name="night_mode_button_default">System default mode</string>
    <string name="night_mode_title">Theme</string>
    <string name="language_title">Language</string>
    <string name="language_button_en">English</string>
    <string name="language_button_ru">Russian</string>
    <string name="text_no_notes">No notes</string>
    <string name="title_dialog">Editing note</string>
    <string name="toast_successfull">Note successfully change</string>
</resources>