<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_red"
        android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/title_settings"
        android:titleTextColor="@color/white" />

    <TextView
        android:padding="16dp"
        android:id="@+id/title_settings_night_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/color_setting_title"
        android:text="@string/night_mode_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_night_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle"
        android:theme="@style/ThemeOverlay.RadioButtons">

        <RadioButton
            android:id="@+id/button_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode_button_dark" />

        <RadioButton
            android:id="@+id/button_light_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode_button_light" />

        <RadioButton
            android:id="@+id/button_system_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode_button_default" />
    </RadioGroup>

    <TextView
        android:padding="16dp"
        android:id="@+id/title_settings_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/color_setting_title"
        android:text="@string/language_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle"
        android:theme="@style/ThemeOverlay.RadioButtons">

        <RadioButton
            android:id="@+id/button_language_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_button_en" />

        <RadioButton
            android:id="@+id/button_language_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_button_ru" />
    </RadioGroup>


</LinearLayout>